--- a/Factorial.Android/Factorial.Android.csproj
+++ b/Factorial.Android/Factorial.Android.csproj
@@ -5,13 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BC32370C-8A26-4056-9C8A-8F19991EBA33}</ProjectGuid>
+    <ProjectGuid>{07F7EE45-BF57-4DAF-9E2C-EAD83644AFEB}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{122416d6-6b49-4ee2-a1e8-b825f31c79fe}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TipCalculator.Android</RootNamespace>
-    <AssemblyName>TipCalculator.Android</AssemblyName>
+    <RootNamespace>Factorial.Android</RootNamespace>
+    <AssemblyName>Factorial.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
@@ -64,8 +64,8 @@
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FactorialView.cs" />
     <Compile Include="Views\SplashView.cs" />
-    <Compile Include="Views\TipView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -96,6 +96,11 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\layout\FactorialPage.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="MvvmCross">
       <Version>6.4.2</Version>
     </PackageReference>
@@ -105,24 +110,25 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TipCalculator.Core\TipCalculator.Core.csproj">
-      <Project>{45480bef-ecad-45bf-8add-7294eb9b69d5}</Project>
-      <Name>TipCalculator.Core</Name>
+    <ProjectReference Include="..\Factorial.Core\Factorial.Core.csproj">
+      <Project>{88c1fadf-8902-49c8-8e29-f1e43f4ce248}</Project>
+      <Name>Factorial.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\splash.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\SplashPage.xml">
+    <AndroidResource Include="Resources\drawable\Icon.png">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\TipPage.xml">
+    <AndroidResource Include="Resources\drawable\splash.png">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\SplashPage.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
